// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando el componente <MapModal/> Deberia mostrar <MapModal> correctamente 1`] = `
<ForwardRef
  center={true}
  onClose={[MockFunction]}
  open={false}
>
  <div
    className="containerModalMap"
  >
    <Memo(Map)
      latitude={-12}
      longitude={9}
      style={
        Object {
          "width": "250px",
        }
      }
      zoom={15}
    />
  </div>
</ForwardRef>
`;

exports[`Pruebas en Card Debe de mostrarse correctamente con una puntuacion de 1 1`] = `
<div
  className="cardBox"
>
  <div
    className="cardImage"
  >
    <svg
      className="iconHeart"
      height="24"
      onClick={[Function]}
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="heartColor"
        d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        id="heart"
      />
    </svg>
    <ForwardRef
      center={true}
      onClose={[Function]}
      open={false}
    >
      <div
        className="modalFavourite"
      >
        <p>
          Para agregar favoritos, ingresa a tu cuenta
        </p>
        <div
          className="buttons"
        >
          <Link
            to="/login"
          >
            <button
              className="login"
            >
              Iniciar Sesión
            </button>
          </Link>
          <Link
            to="/create"
          >
            <button
              className="create"
            >
              Crear Cuenta
            </button>
          </Link>
        </div>
      </div>
    </ForwardRef>
    <img
      alt=""
      className="image"
      src="test"
    />
  </div>
  <div
    className="cardInfo"
  >
    <div
      className="cardHeaderBox"
    >
      <div
        className="cardHeadline"
      >
        <div
          className="cardCategory"
        >
          <p>
            test
          </p>
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
        </div>
        <div
          className="cardName"
        >
          test
        </div>
      </div>
      <div
        className="cardScore"
      >
        <div
          className="cardScoreNumber"
        >
          <p>
            1
          </p>
        </div>
        <div
          className="cardScoreWords"
        >
          Malo
        </div>
      </div>
    </div>
    <div
      className="cardLocation"
    >
      <img
        alt=""
        className="iconLocation"
        src="IconLocation.svg"
      />
      test
      , 
      test
      , 
      test
      <span
        onClick={[Function]}
      >
        mostrar en el mapa
      </span>
      <MapModal
        closeMapModal={[Function]}
        mapIsOpen={false}
        name="test"
      />
    </div>
    <div
      className="cardIcons"
    />
    <div
      className="cardDescription"
    >
      <p>
        test
      </p>
      <span>
        más...
      </span>
    </div>
    <Link
      className="link"
      key="1"
      to="/product/1"
    >
      <button
        className="cardButton2"
      >
        Ver más
      </button>
    </Link>
  </div>
</div>
`;

exports[`Pruebas en Card Debe de mostrarse correctamente con una puntuacion de 3 1`] = `
<div
  className="cardBox"
>
  <div
    className="cardImage"
  >
    <svg
      className="iconHeart"
      height="24"
      onClick={[Function]}
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="heartColor"
        d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        id="heart"
      />
    </svg>
    <ForwardRef
      center={true}
      onClose={[Function]}
      open={false}
    >
      <div
        className="modalFavourite"
      >
        <p>
          Para agregar favoritos, ingresa a tu cuenta
        </p>
        <div
          className="buttons"
        >
          <Link
            to="/login"
          >
            <button
              className="login"
            >
              Iniciar Sesión
            </button>
          </Link>
          <Link
            to="/create"
          >
            <button
              className="create"
            >
              Crear Cuenta
            </button>
          </Link>
        </div>
      </div>
    </ForwardRef>
    <img
      alt=""
      className="image"
      src="test"
    />
  </div>
  <div
    className="cardInfo"
  >
    <div
      className="cardHeaderBox"
    >
      <div
        className="cardHeadline"
      >
        <div
          className="cardCategory"
        >
          <p>
            test
          </p>
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
        </div>
        <div
          className="cardName"
        >
          test
        </div>
      </div>
      <div
        className="cardScore"
      >
        <div
          className="cardScoreNumber"
        >
          <p>
            3
          </p>
        </div>
        <div
          className="cardScoreWords"
        >
          Regular
        </div>
      </div>
    </div>
    <div
      className="cardLocation"
    >
      <img
        alt=""
        className="iconLocation"
        src="IconLocation.svg"
      />
      test
      , 
      test
      , 
      test
      <span
        onClick={[Function]}
      >
        mostrar en el mapa
      </span>
      <MapModal
        closeMapModal={[Function]}
        mapIsOpen={false}
        name="test"
      />
    </div>
    <div
      className="cardIcons"
    />
    <div
      className="cardDescription"
    >
      <p>
        test
      </p>
      <span>
        más...
      </span>
    </div>
    <Link
      className="link"
      key="1"
      to="/product/1"
    >
      <button
        className="cardButton2"
      >
        Ver más
      </button>
    </Link>
  </div>
</div>
`;

exports[`Pruebas en Card Debe de mostrarse correctamente con una puntuacion de 5 1`] = `
<div
  className="cardBox"
>
  <div
    className="cardImage"
  >
    <svg
      className="iconHeart"
      height="24"
      onClick={[Function]}
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="heartColor"
        d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        id="heart"
      />
    </svg>
    <ForwardRef
      center={true}
      onClose={[Function]}
      open={false}
    >
      <div
        className="modalFavourite"
      >
        <p>
          Para agregar favoritos, ingresa a tu cuenta
        </p>
        <div
          className="buttons"
        >
          <Link
            to="/login"
          >
            <button
              className="login"
            >
              Iniciar Sesión
            </button>
          </Link>
          <Link
            to="/create"
          >
            <button
              className="create"
            >
              Crear Cuenta
            </button>
          </Link>
        </div>
      </div>
    </ForwardRef>
    <img
      alt=""
      className="image"
      src="test"
    />
  </div>
  <div
    className="cardInfo"
  >
    <div
      className="cardHeaderBox"
    >
      <div
        className="cardHeadline"
      >
        <div
          className="cardCategory"
        >
          <p>
            test
          </p>
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
        </div>
        <div
          className="cardName"
        >
          test
        </div>
      </div>
      <div
        className="cardScore"
      >
        <div
          className="cardScoreNumber"
        >
          <p>
            5
          </p>
        </div>
        <div
          className="cardScoreWords"
        >
          Bueno
        </div>
      </div>
    </div>
    <div
      className="cardLocation"
    >
      <img
        alt=""
        className="iconLocation"
        src="IconLocation.svg"
      />
      test
      , 
      test
      , 
      test
      <span
        onClick={[Function]}
      >
        mostrar en el mapa
      </span>
      <MapModal
        closeMapModal={[Function]}
        mapIsOpen={false}
        name="test"
      />
    </div>
    <div
      className="cardIcons"
    />
    <div
      className="cardDescription"
    >
      <p>
        test
      </p>
      <span>
        más...
      </span>
    </div>
    <Link
      className="link"
      key="1"
      to="/product/1"
    >
      <button
        className="cardButton2"
      >
        Ver más
      </button>
    </Link>
  </div>
</div>
`;

exports[`Pruebas en Card Debe de mostrarse correctamente con una puntuacion de 7 1`] = `
<div
  className="cardBox"
>
  <div
    className="cardImage"
  >
    <svg
      className="iconHeart"
      height="24"
      onClick={[Function]}
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="heartColor"
        d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        id="heart"
      />
    </svg>
    <ForwardRef
      center={true}
      onClose={[Function]}
      open={false}
    >
      <div
        className="modalFavourite"
      >
        <p>
          Para agregar favoritos, ingresa a tu cuenta
        </p>
        <div
          className="buttons"
        >
          <Link
            to="/login"
          >
            <button
              className="login"
            >
              Iniciar Sesión
            </button>
          </Link>
          <Link
            to="/create"
          >
            <button
              className="create"
            >
              Crear Cuenta
            </button>
          </Link>
        </div>
      </div>
    </ForwardRef>
    <img
      alt=""
      className="image"
      src="test"
    />
  </div>
  <div
    className="cardInfo"
  >
    <div
      className="cardHeaderBox"
    >
      <div
        className="cardHeadline"
      >
        <div
          className="cardCategory"
        >
          <p>
            test
          </p>
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
        </div>
        <div
          className="cardName"
        >
          test
        </div>
      </div>
      <div
        className="cardScore"
      >
        <div
          className="cardScoreNumber"
        >
          <p>
            7
          </p>
        </div>
        <div
          className="cardScoreWords"
        >
          Muy Bueno
        </div>
      </div>
    </div>
    <div
      className="cardLocation"
    >
      <img
        alt=""
        className="iconLocation"
        src="IconLocation.svg"
      />
      test
      , 
      test
      , 
      test
      <span
        onClick={[Function]}
      >
        mostrar en el mapa
      </span>
      <MapModal
        closeMapModal={[Function]}
        mapIsOpen={false}
        name="test"
      />
    </div>
    <div
      className="cardIcons"
    />
    <div
      className="cardDescription"
    >
      <p>
        test
      </p>
      <span>
        más...
      </span>
    </div>
    <Link
      className="link"
      key="1"
      to="/product/1"
    >
      <button
        className="cardButton2"
      >
        Ver más
      </button>
    </Link>
  </div>
</div>
`;

exports[`Pruebas en Card Debe de mostrarse correctamente con una puntuacion de 10 1`] = `
<div
  className="cardBox"
>
  <div
    className="cardImage"
  >
    <svg
      className="iconHeart"
      height="24"
      onClick={[Function]}
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="heartColor"
        d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        id="heart"
      />
    </svg>
    <ForwardRef
      center={true}
      onClose={[Function]}
      open={false}
    >
      <div
        className="modalFavourite"
      >
        <p>
          Para agregar favoritos, ingresa a tu cuenta
        </p>
        <div
          className="buttons"
        >
          <Link
            to="/login"
          >
            <button
              className="login"
            >
              Iniciar Sesión
            </button>
          </Link>
          <Link
            to="/create"
          >
            <button
              className="create"
            >
              Crear Cuenta
            </button>
          </Link>
        </div>
      </div>
    </ForwardRef>
    <img
      alt=""
      className="image"
      src="test"
    />
  </div>
  <div
    className="cardInfo"
  >
    <div
      className="cardHeaderBox"
    >
      <div
        className="cardHeadline"
      >
        <div
          className="cardCategory"
        >
          <p>
            test
          </p>
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
        </div>
        <div
          className="cardName"
        >
          test
        </div>
      </div>
      <div
        className="cardScore"
      >
        <div
          className="cardScoreNumber"
        >
          <p>
            10
          </p>
        </div>
        <div
          className="cardScoreWords"
        >
          Excelente
        </div>
      </div>
    </div>
    <div
      className="cardLocation"
    >
      <img
        alt=""
        className="iconLocation"
        src="IconLocation.svg"
      />
      test
      , 
      test
      , 
      test
      <span
        onClick={[Function]}
      >
        mostrar en el mapa
      </span>
      <MapModal
        closeMapModal={[Function]}
        mapIsOpen={false}
        name="test"
      />
    </div>
    <div
      className="cardIcons"
    />
    <div
      className="cardDescription"
    >
      <p>
        test
      </p>
      <span>
        más...
      </span>
    </div>
    <Link
      className="link"
      key="1"
      to="/product/1"
    >
      <button
        className="cardButton2"
      >
        Ver más
      </button>
    </Link>
  </div>
</div>
`;

exports[`Pruebas en Card Debe mostrar un error con una calificacion invalida 1`] = `
<div
  className="cardBox"
>
  <div
    className="cardImage"
  >
    <svg
      className="iconHeart"
      height="24"
      onClick={[Function]}
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="heartColor"
        d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
        id="heart"
      />
    </svg>
    <ForwardRef
      center={true}
      onClose={[Function]}
      open={false}
    >
      <div
        className="modalFavourite"
      >
        <p>
          Para agregar favoritos, ingresa a tu cuenta
        </p>
        <div
          className="buttons"
        >
          <Link
            to="/login"
          >
            <button
              className="login"
            >
              Iniciar Sesión
            </button>
          </Link>
          <Link
            to="/create"
          >
            <button
              className="create"
            >
              Crear Cuenta
            </button>
          </Link>
        </div>
      </div>
    </ForwardRef>
    <img
      alt=""
      className="image"
      src="test"
    />
  </div>
  <div
    className="cardInfo"
  >
    <div
      className="cardHeaderBox"
    >
      <div
        className="cardHeadline"
      >
        <div
          className="cardCategory"
        >
          <p>
            test
          </p>
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
          <img
            alt=""
            className="star"
            src="starOrange.png"
          />
        </div>
        <div
          className="cardName"
        >
          test
        </div>
      </div>
      <div
        className="cardScore"
      >
        <div
          className="cardScoreNumber"
        >
          <p>
            12
          </p>
        </div>
        <div
          className="cardScoreWords"
        >
          Calificacion Invalida
        </div>
      </div>
    </div>
    <div
      className="cardLocation"
    >
      <img
        alt=""
        className="iconLocation"
        src="IconLocation.svg"
      />
      test
      , 
      test
      , 
      test
      <span
        onClick={[Function]}
      >
        mostrar en el mapa
      </span>
      <MapModal
        closeMapModal={[Function]}
        mapIsOpen={false}
        name="test"
      />
    </div>
    <div
      className="cardIcons"
    />
    <div
      className="cardDescription"
    >
      <p>
        test
      </p>
      <span>
        más...
      </span>
    </div>
    <Link
      className="link"
      key="1"
      to="/product/1"
    >
      <button
        className="cardButton2"
      >
        Ver más
      </button>
    </Link>
  </div>
</div>
`;

exports[`Pruebas en Cards Debe de mostrarse correctamente 1`] = `
<div
  className="delimiter"
>
  <div
    className="cardsBlock delimiterChild"
  >
    <h2>
      Recomendaciones
    </h2>
    <div
      className="cardsBox"
    />
    <div
      className="pages"
    />
  </div>
</div>
`;

exports[`Pruebas en Cards Debe de mostrarse correctamente 2`] = `
<div
  className="delimiter"
>
  <div
    className="cardsBlock delimiterChild"
  >
    <h2>
      Recomendaciones
    </h2>
    <div
      className="cardsBox"
    />
    <div
      className="pages"
    />
  </div>
</div>
`;
